--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -37,19 +37,19 @@
     </listener>
     <!-- spring mvc servlet-->
     <servlet>
-        <servlet-name>SpringMVC</servlet-name>
+        <servlet-name>dispatcherServlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:/spring/spring-config.xml</param-value>
+            <param-value>classpath:/config/spring/spring-config.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
         <async-supported>true</async-supported>
     </servlet>
     <servlet-mapping>
-        <servlet-name>SpringMVC</servlet-name>
+        <servlet-name>dispatcherServlet</servlet-name>
         <!-- 此处也可以配置成 *.do 形式 -->
-        <url-pattern>*.video</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 
     <welcome-file-list>
@@ -60,4 +60,10 @@
     <session-config>
         <session-timeout>15</session-timeout>
     </session-config>
+
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath:config/spring/spring-mybatis.xml</param-value>
+    </context-param>
+
 </web-app>
