--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,10 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <!--便于后期管理同步版本信息，所以这里架包版本信息使用公共参数,也可以在在架包的引用version写死版本信息，但是不推荐这样使用-->
     <!-- spring版本号 -->
-    <spring.version>3.1.1.RELEASE</spring.version>
+    <spring.version>4.2.5.RELEASE</spring.version>
 
     <!-- mybatis版本号 -->
-    <mybatis.version>3.2.8</mybatis.version>
+    <mybatis.version>3.3.1</mybatis.version>
 
     <!-- mysql驱动版本号 -->
     <mysql-driver.version>5.1.29</mysql-driver.version>
@@ -33,12 +33,6 @@
   </properties>
 
   <dependencies>
-    <!-- 添加jstl依赖 -->
-    <dependency>
-      <groupId>jstl</groupId>
-      <artifactId>jstl</artifactId>
-      <version>1.2</version>
-    </dependency>
 
     <dependency>
       <groupId>javax</groupId>
@@ -60,6 +54,14 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
       <version>${spring.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
+      </exclusions>
+      <type>jar</type>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
@@ -107,6 +109,34 @@
       <artifactId>spring-test</artifactId>
       <version>${spring.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <version>${spring.version}</version>
+      <type>jar</type>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aspects</artifactId>
+      <version>${spring.version}</version>
+      <type>jar</type>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-expression</artifactId>
+      <version>${spring.version}</version>
+      <type>jar</type>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jms</artifactId>
+      <version>${spring.version}</version>
+      <type>jar</type>
+      <scope>compile</scope>
+    </dependency>
 
     <!-- 添加mybatis依赖 -->
     <dependency>
@@ -119,7 +149,7 @@
     <dependency>
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis-spring</artifactId>
-      <version>1.2.2</version>
+      <version>1.2.4</version>
     </dependency>
 
     <!-- 添加mysql驱动依赖 -->
@@ -132,8 +162,36 @@
     <dependency>
       <groupId>commons-dbcp</groupId>
       <artifactId>commons-dbcp</artifactId>
-      <version>1.2.2</version>
+      <version>1.4</version>
     </dependency>
+    <!--<dependency>-->
+      <!--<groupId>c3p0</groupId>-->
+      <!--<artifactId>c3p0</artifactId>-->
+      <!--<version>0.9.1.2</version>-->
+    <!--</dependency>-->
+    <dependency>
+      <groupId>commons-pool</groupId>
+      <artifactId>commons-pool</artifactId>
+      <version>1.5.4</version>
+    </dependency>
+
+    <!-- servlet-->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
+    <!-- freemarker模板引擎-->
+    <!--<dependency>-->
+      <!--<groupId>org.freemarker</groupId>-->
+      <!--<artifactId>freemarker</artifactId>-->
+      <!--<version>2.3.23</version>-->
+    <!--</dependency>-->
 
     <!-- 添加fastjson -->
     <dependency>
@@ -159,6 +217,18 @@
       <version>${slf4j.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <version>1.1.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-collections</groupId>
+      <artifactId>commons-collections</artifactId>
+      <version>3.2.1</version>
+    </dependency>
+
     <!-- log end -->
     <!-- 映入JSON -->
     <dependency>
@@ -179,16 +249,16 @@
       <version>2.8.0</version>
     </dependency>
 
-    <dependency>
-      <groupId>commons-fileupload</groupId>
-      <artifactId>commons-fileupload</artifactId>
-      <version>1.3.1</version>
-    </dependency>
-
+    <!-- 文件上传 -->
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>2.4</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.1</version>
     </dependency>
 
     <dependency>
@@ -205,6 +275,14 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>2.0.1.Final</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>dzdp</finalName>
