--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,11 @@
         <param-name>log4jConfigLocation</param-name>
         <param-value>classpath:log4j.properties</param-value>
     </context-param>
+    <listener>
+        <listener-class>
+            org.springframework.web.util.Log4jConfigListener
+        </listener-class>
+    </listener>
 
     <!-- 编码过滤器 -->
     <filter>
@@ -63,7 +68,7 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:config/spring/spring-mybatis.xml</param-value>
+        <param-value>classpath:config/spring/mybatis-config.xml</param-value>
     </context-param>
 
 </web-app>
