修改了spring的配置相关

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 #连接驱动
-driverClasss=com.mysql.jdbc.Driver
+jdbcDriver=com.mysql.jdbc.Driver
 #数据库链接地址
 jdbcUrl=jdbc:mysql://localhost:3306/mybatis?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 #数据库连接账号
