--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
-    <display-name>Archetype Created Web Application</display-name>
+    <display-name>DZDP Web Application</display-name>
 
     <!--添加log4的日志配置文件-->
     <context-param>
@@ -17,7 +17,7 @@
         </listener-class>
     </listener>
 
-    <!-- 编码过滤器 -->
+    <!-- 编码过滤器，解决post的乱码问题 -->
     <filter>
         <filter-name>encodingFilter</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -40,7 +40,7 @@
     <listener>
         <listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
     </listener>
-    <!-- spring mvc servlet-->
+    <!-- 配置SpringMVC -->
     <servlet>
         <servlet-name>dispatcherServlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -66,9 +66,10 @@
         <session-timeout>15</session-timeout>
     </session-config>
 
+    <!-- 配置spring -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:config/spring/applicationContext-dao.xml</param-value>
+        <param-value>classpath:config/spring/applicationContext-*.xml</param-value>
     </context-param>
 
 </web-app>
